--- a/project2.html
+++ b/project2.html
@@ -66,6 +66,24 @@
         <h2>Part 1: Fun with Filter</h2>
         <h2>Part 1.1: Finite Difference Operator</h2>
         <p>In order to calculate partial derivatives, I used finite difference kernels. Dx kernel is created by np.array([[1, -1]]) and Dy kernel is created bynp.array([[1], [-1]]. By convolving the image with these finite difference kernels, I have obtained the partial derivatives in horizontal and vertical directions. To form the gradient magnitude image, I used scipy.sqrt(dx ** 2 + dy ** 2). In order to binarize the gradient magnitude, I have chosen a threshold of 0.29 per pixel.</p>
+        <div class="images">
+        <div class="image-item">
+            <img src="imagesproj2/d_x.jpg" alt="d_x.jpg">
+            <p class="image-subtitle">d_x</p>
+        </div>
+        <div class="image-item">
+            <img src="imagesproj2/d_y.jpg" alt="d_y.jpg">
+            <p class="image-subtitle">d_y</p>
+        </div>
+        <div class="image-item">
+            <img src="imagesproj2/magnitude.jpg" alt="magnitude.jpg">
+            <p class="image-subtitle">Gradient Magnitude</p>
+        </div>
+        <div class="image-item">
+            <img src="imagesproj2/gradient_magnitude.jpg" alt="gradient_magnitude.jpg">
+            <p class="image-subtitle">Binarized Gradient Magnitude</p>
+        </div>
+    </div>
     </div>
         <div class="project-overview">
         <h2>Project Overview</h2>
