--- a/project2.html
+++ b/project2.html
@@ -29,14 +29,15 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
             margin-bottom: 20px;
         }
-        .image-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
+       .image-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 15px;
+    margin-bottom: 20px;
         }
         .image-container {
             background-color: #fff;
-            padding: 15px;
+            padding: 10px;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
@@ -46,7 +47,7 @@
             border-radius: 3px;
         }
         .image-description {
-            margin-top: 10px;
+            margin-top: 8px;
             font-style: italic;
             font-size: 0.9em;
             color: #555;
