--- a/project2.html
+++ b/project2.html
@@ -103,13 +103,33 @@
                 <p class="image-subtitle">Dy of Blurred image</p>
             </div>
             <div class="image-container">
-                <img src="proj2images/im_blurred_magnitude.jpg" alt="im_blurredmagnitude.jpg">
+                <img src="proj2images/im_blurred_magnitude.jpg" alt="im_blurred_magnitude.jpg">
                 <p class="image-subtitle">Gradient Magnitude of Blurred Image</p>
             </div>
             <div class="image-container">
                 <img src="proj2images/im_blurred_gradient_magnitude.jpg" alt="im_blurred_gradient_magnitude.jpg">
                 <p class="image-subtitle">Binarized Gradient Magnitude of Blurred Image</p>
             </div>
+            <p> This time, I convolved with the derivative of Gaussian instead of convolving the image twice with partial derivatives and the Gaussian filter.</p>
+            <p> The results are the same because of convolution operation's associativity property. </p>
+            <div class="image-grid">
+            <div class="image-container">
+                <img src="proj2images/im_blurred_dx.jpg" alt="dog_dx.jpg">
+                <p class="image-subtitle">Dx DoG</p>
+            </div>
+            <div class="image-container">
+                <img src="proj2images/im_blurred_dy.jpg" alt="dog_dy.jpg">
+                <p class="image-subtitle">Dy DoG</p>
+            </div>
+            <div class="image-container">
+                <img src="proj2images/im_blurred_magnitude.jpg" alt="dog_magnitude.jpg">
+                <p class="image-subtitle">Gradient Magnitude of DoG</p>
+            </div>
+            <div class="image-container">
+                <img src="proj2images/im_blurred_gradient_magnitude.jpg" alt="dog_gradient_magnitude.jpg">
+                <p class="image-subtitle">Binarized Gradient Magnitude of DoG</p>
+            </div>
+                
         </div>
 </body>
 </html>
