--- a/project2.html
+++ b/project2.html
@@ -30,10 +30,10 @@
             margin-bottom: 20px;
         }
        .image-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 15px;
-    margin-bottom: 20px;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 15px;
+            margin-bottom: 20px;
         }
         .image-container {
             background-color: #fff;
