--- a/project2.html
+++ b/project2.html
@@ -123,7 +123,7 @@
         </div>
         <div class="clear-float"></div>
         <p> This time, I convolved with the derivative of Gaussian instead of convolving the image twice with partial derivatives and the Gaussian filter.</p>
-        <p> The results are the same because of convolution operation's associativity property. </p>
+        <p> The results are visibly the same because of convolution operation's associativity property. I used the same threshold for the binary gradient magnitude and obtained the same edge image. </p>
         <div class="image-grid">
         <div class="image-container">
             <img src="proj2images/im_blurred_dx.jpg" alt="dog_dx.jpg">
