--- a/project2.html
+++ b/project2.html
@@ -70,7 +70,7 @@
 
     <div class="Background">
         <h2>Background</h2>
-        <p>In this project, I focused on manipulating image frequencies to achieve various effects. I sharpened images by boosting high-frequency components, created hybrid images by combining high and low frequencies from different images, and blended iamges using Gaussian and Laplacian stacks.</p>
+        <p>In this project, I focused on manipulating image frequencies to achieve various effects. I sharpened images by boosting high-frequency components, created hybrid images by combining high and low frequencies from different images, and blended images using Gaussian and Laplacian stacks.</p>
     </div>
     
     <div class="project-overview">
