--- a/project2.html
+++ b/project2.html
@@ -139,8 +139,10 @@
             <img src="proj2images/taj_sharp.jpg" alt="taj_sharp.jpg">
             <p class="image-subtitle">Sharpened Taj Mahal</p>
         </div>
+        </div>
         <div class="clear-float"></div>
-                <div class="image-container">
+        <div class="image-gri">
+        <div class="image-container">
             <img src="proj2images/ataturk.jpg" alt="ataturk.jpg">
             <p class="image-subtitle">Mustafa Kemal Ataturk</p>
         </div>
@@ -148,8 +150,10 @@
             <img src="proj2images/ataturk_sharp.jpg" alt="ataturk_sharp.jpg">
             <p class="image-subtitle">Sharpened Mustafa Kemal Ataturk</p>
         </div>
+        </div>
         <div class="clear-float"></div>
-                <div class="image-container">
+        <div class="image-gri">
+        <div class="image-container">
             <img src="proj2images/galatasaray.jpg" alt="galatasaray.jpg">
             <p class="image-subtitle">Galatasaray players are celebrating defeating Fenerbahce</p>
         </div>
@@ -157,14 +161,21 @@
             <img src="proj2images/galatasaray_sharp.jpg" alt="galatasaray_sharp.jpg">
             <p class="image-subtitle">Sharpened Galatasaray players are celebrating defeating Fenerbahce</p>
         </div>
+        </div>
         <div class="clear-float"></div>
-                <div class="image-container">
-            <img src="proj2images/ataturk.jpg" alt="ataturk.jpg">
-            <p class="image-subtitle">Mustafa Kemal Atatur</p>
+        <div class="image-grid">
+        <div class="image-container">
+            <img src="proj2images/tt_arena.jpg" alt="tt_arena.jpg">
+            <p class="image-subtitle">Rams park</p>
         </div>
         <div class="image-container">
-            <img src="proj2images/ataturk_sharp.jpg" alt="ataturk_sharp.jpg">
-            <p class="image-subtitle">Sharpened Mustafa Kemal Ataturk</p>
+            <img src="proj2images/tt_blur.jpg" alt="tt_blur.jpg">
+            <p class="image-subtitle">Blurred Rams Park</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/tt_blur_sharp.jpg" alt="tt_blur_sharp.jpg">
+            <p class="image-subtitle">Sharpened version of Blurred Rams Park</p>
+        </div>
         </div>
         <div class="clear-float"></div>
     </div>
