--- a/project2.html
+++ b/project2.html
@@ -163,7 +163,7 @@
         </div>
         </div>
         <div class="clear-float"></div>
-        <div class="image-grid">
+        <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/tt_arena.jpg" alt="tt_arena.jpg">
             <p class="image-subtitle">Rams park</p>
