--- a/project2.html
+++ b/project2.html
@@ -178,6 +178,21 @@
         </div>
         </div>
         <div class="clear-float"></div>
+        <div class="image-gri">
+        <div class="image-container">
+            <img src="proj2images/DerekPicture.jpg" alt="DerekPicture.jpg">
+            <p class="image-subtitle">Derek</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/nutmeg.jpg" alt="nutmeg.jpg">
+            <p class="image-subtitle">Nutmeg</p>
+        </div>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/derek" alt="derekcat.jpg">
+            <p class="image-subtitle">Dermeg? Nutrek?</p>
+        </div>
+        <div class="clear-float"></div>
     </div>
 </body>
 </html>
