--- a/project2.html
+++ b/project2.html
@@ -189,7 +189,7 @@
         </div>
         </div>
         <div class="image-container">
-            <img src="proj2images/derek" alt="derekcat.jpg">
+            <img src="proj2images/derekcat.jpg" alt="derekcat.jpg">
             <p class="image-subtitle">Dermeg? Nutrek?</p>
         </div>
         <div class="clear-float"></div>
