--- a/project2.html
+++ b/project2.html
@@ -178,7 +178,7 @@
         </div>
         </div>
         <div class="clear-float"></div>
-        <div class="image-gri">
+        <div class="image-grid">
         <div class="image-container">
             <img src="proj2images/DerekPicture.jpg" alt="DerekPicture.jpg">
             <p class="image-subtitle">Derek</p>
@@ -190,6 +190,36 @@
         <div class="image-container">
             <img src="proj2images/catderek.jpg" alt="derekcat.jpg">
             <p class="image-subtitle">Dermeg? Nutrek?</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
+        <div class="image-grid">
+        <div class="image-container">
+            <img src="proj2images/darwin.jpg" alt="darwin.jpg">
+            <p class="image-subtitle">Darwin</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/chimp.jpg" alt="chimp.jpg">
+            <p class="image-subtitle">Chimp</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/darwin_monkey.jpg" alt="darwin_monkey.jpg">
+            <p class="image-subtitle">Hybrid Darwin</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
+        <div class="image-grid">
+        <div class="image-container">
+            <img src="proj2images/tan.jpg" alt="tann.jpg">
+            <p class="image-subtitle">Tan</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/two_face.jpg" alt="two_face.jpg">
+            <p class="image-subtitle">Two-Face</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/two_tsg.jpg" alt="two_tsg.jpg">
+            <p class="image-subtitle">Two-Tan</p>
         </div>
         </div>
         <div class="clear-float"></div>
